# tick

./: .gitignore  LICENSE  Makefile  TODO.md  dune-project  tick.opam
examples/: bools.tick  fibonacci.tick  if.tick  linked_list.tick  pointers.tick  reassign.tick  string_test.tick  strings.tick  structs.tick  structs2.tick  testfun.tick
lib/: ast.ml  compiler.ml  dune  lexer.ml  parser.ml  token.ml
scripts/: build_bin.sh
test/: dune  parser_test.ml
